[package]
name = "nbnhhsh-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
ureq = { version = "2.4.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
